Fix author page mobile spacing

--- a/app/themes/laszlo/components/layout/author-page/author-page.css
+++ b/app/themes/laszlo/components/layout/author-page/author-page.css
@@ -15,17 +15,20 @@
     display: flex;
     flex-direction: column;
     order: 2;
+    padding: var(--page-side-gap);
     border: 1px solid var(--color-surface-variant);
     border-radius: var(--spacing-4);
+    background-color: var(--color-surface);
     gap: var(--author-page-content-gap);
+    margin-inline: calc(var(--page-side-gap) * -1);
 
     @media screen and (min-width: 640px) {
       padding: var(--spacing-16) var(--spacing-12);
-      background-color: var(--color-surface);
     }
 
     @media screen and (min-width: 1200px) {
       order: initial;
+      margin-inline: unset;
     }
   }
 
